[gd_scene load_steps=17 format=3 uid="uid://58v0qq84xeo0"]

[ext_resource type="Texture2D" uid="uid://dv4gitnto6mx1" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_BACK.png" id="1_4j5ol"]
[ext_resource type="Script" uid="uid://ybt3hvlmw3b0" path="res://scene/main.gd" id="1_of57s"]
[ext_resource type="Texture2D" uid="uid://266f01g6u6cr" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_DOWN.png" id="2_p1hux"]
[ext_resource type="Texture2D" uid="uid://d1qakoluqnj6d" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_FRONT.png" id="3_of57s"]
[ext_resource type="Texture2D" uid="uid://bsem0gcvtndx4" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_LEFT.png" id="4_b5f6u"]
[ext_resource type="Texture2D" uid="uid://di87vo76ov63c" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_RIGHT.png" id="5_tqoya"]
[ext_resource type="Texture2D" uid="uid://wtuh3oqlhpiv" path="res://art/Space Skybox Pack/common/jettelly_space_common_blue_UP.png" id="6_k65ib"]
[ext_resource type="Texture2D" uid="uid://ddo2blxhm6txp" path="res://art/openGameArt/printed_circuit_board_texture.png" id="8_of57s"]
[ext_resource type="PackedScene" uid="uid://duon3fpniyk4u" path="res://scene/puzzles/circuit_2x_1.tscn" id="9_b5f6u"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_evhkr"]
texture = ExtResource("1_4j5ol")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_nn232"]
texture = ExtResource("2_p1hux")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_c82hy"]
texture = ExtResource("3_of57s")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jhc4n"]
texture = ExtResource("4_b5f6u")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8ipbj"]
texture = ExtResource("5_tqoya")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fn8lc"]
texture = ExtResource("6_k65ib")
texture_region_size = Vector2i(1024, 1024)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_65jmh"]
tile_size = Vector2i(1024, 1024)
sources/0 = SubResource("TileSetAtlasSource_evhkr")
sources/1 = SubResource("TileSetAtlasSource_nn232")
sources/2 = SubResource("TileSetAtlasSource_c82hy")
sources/3 = SubResource("TileSetAtlasSource_jhc4n")
sources/4 = SubResource("TileSetAtlasSource_8ipbj")
sources/5 = SubResource("TileSetAtlasSource_fn8lc")

[node name="main" type="Node2D"]
script = ExtResource("1_of57s")

[node name="spaceBackground" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 4, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0, 1, 0, 1, 0, 1, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_65jmh")

[node name="scores" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(480, 120)
offset_right = 40.0
offset_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="pop" type="HBoxContainer" parent="scores"]
layout_mode = 2

[node name="popLabel" type="RichTextLabel" parent="scores/pop"]
layout_mode = 2
size_flags_horizontal = 3
text = "Remaining Population: "
fit_content = true
horizontal_alignment = 2

[node name="popDisplay" type="RichTextLabel" parent="scores/pop"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "1,000,000,000"
fit_content = true

[node name="chips" type="HBoxContainer" parent="scores"]
layout_mode = 2

[node name="chipLabel" type="RichTextLabel" parent="scores/chips"]
custom_minimum_size = Vector2(240, 0)
layout_mode = 2
text = "Circuit Chips: "
fit_content = true
horizontal_alignment = 2

[node name="chipDisplay" type="RichTextLabel" parent="scores/chips"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "10 / 10"

[node name="TextureRect" type="TextureRect" parent="scores/chips"]
layout_mode = 2
texture = ExtResource("8_of57s")
expand_mode = 3

[node name="time" type="HBoxContainer" parent="scores"]
layout_mode = 2

[node name="timeLabel" type="RichTextLabel" parent="scores/time"]
layout_mode = 2
size_flags_horizontal = 3
text = "Time Elapsed: "
fit_content = true
horizontal_alignment = 2

[node name="timeDisplay" type="RichTextLabel" parent="scores/time"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "00:12.562"
fit_content = true

[node name="frames" type="Node2D" parent="."]

[node name="circuit_2x1" parent="." instance=ExtResource("9_b5f6u")]
position = Vector2(480, 480)
